--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
           </div>
           <h5 class="features__header">100% digital bank</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde alias
-            sint quos? Accusantium a fugiat porro reiciendis saepe quibusdam
-            debitis ducimus.
+          A 100% digital bank seamless, paperless, and fully online banking services without the need for any physical branches. With the **Bankist App**, users can open accounts, transfer funds, view transaction history, manage savings, and access customer support—all from their smartphones or computers. This modern approach ensures 24/7 accessibility, enhanced security, faster processing, and a user-friendly experience. Bankist combines smart technology with intuitive design to deliver a banking solution that fits today’s digital lifestyle, empowering users with complete control over their finances anytime, anywhere.
+
           </p>
         </div>
 
