Add short description for 100% digital bank

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           <h5 class="features__header">100% digital bank</h5>
           <p>
-          A 100% digital bank seamless, paperless, and fully online banking services without the need for any physical branches. With the **Bankist App**, users can open accounts, transfer funds, view transaction history, manage savings, and access customer support—all from their smartphones or computers. This modern approach ensures 24/7 accessibility, enhanced security, faster processing, and a user-friendly experience. Bankist combines smart technology with intuitive design to deliver a banking solution that fits today’s digital lifestyle, empowering users with complete control over their finances anytime, anywhere.
+            A 100% digital bank provides fully online, paperless banking without the need for physical branches. With the Bankist App, users can open accounts, transfer money, track transactions, manage savings, and get support—all from their devices. It ensures 24/7 access, strong security, and a smooth user experience, giving users complete control over their finances anytime, anywhere.
 
           </p>
         </div>
