Add debit and credit card feature descriptions

--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
           </div>
           <h5 class="features__header">Watch your money grow</h5>
           <p>
-            Nesciunt quos autem dolorum voluptates cum dolores dicta fuga
-            inventore ab? Nulla incidunt eius numquam sequi iste pariatur
-            quibusdam!
+            Watch your money grow with smart savings tools, real-time insights, and effortless financial management. The Bankist App empowers you to track progress, set goals, and make informed decisions—turning everyday banking into long-term growth.
           </p>
         </div>
         <img
@@ -124,9 +122,10 @@
           </div>
           <h5 class="features__header">Free debit card included</h5>
           <p>
-            Quasi, fugit in cumque cupiditate reprehenderit debitis animi enim
-            eveniet consequatur odit quam quos possimus assumenda dicta fuga
-            inventore ab.
+            Get instant access to a smart credit card—secure, rewarding, and built for your lifestyle.
+            Or for a more compact version:
+            ✔ Smart, secure credit card with instant approval
+            And if you want to present it like a feature highlight with the others:
           </p>
         </div>
       </div>
