Add paragraph about freedom from old-school banks

--- a/index.html
+++ b/index.html
@@ -167,10 +167,7 @@
             Tranfser money to anyone, instantly! No fees, no BS.
           </h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Send money instantly to anyone—anytime, anywhere—with zero hidden charges. The Bankist App makes transferring funds fast, secure, and hassle-free. Whether it's paying a friend back, splitting bills, or sending money across the country, you can do it all in seconds—no fees, no delays, no nonsense.
           </p>
         </div>
 
@@ -184,10 +181,7 @@
             Buy a home or make your dreams come true, with instant loans.
           </h5>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Turn your dreams into reality with instant personal and home loans. Whether you're planning to buy a house, fund a big purchase, or cover unexpected expenses, the Bankist App offers fast, hassle-free loan approvals with flexible terms—so you can move forward without delay.
           </p>
         </div>
         <div class="operations__content operations__content--3">
@@ -200,10 +194,7 @@
             No longer need your account? No problem! Close it instantly.
           </h5>
           <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            No longer need your account? Closing it is quick and easy. With the Bankist App, you can close your account instantly—no paperwork, no waiting. Manage your banking on your terms, hassle-free.
           </p>
         </div>
       </div>
@@ -223,12 +214,7 @@
           <div class="testimonial">
             <h5 class="testimonial__header">Best financial decision ever!</h5>
             <blockquote class="testimonial__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Accusantium quas quisquam non? Quas voluptate nulla minima
-              deleniti optio ullam nesciunt, numquam corporis et asperiores
-              laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
-              id alias reiciendis, perferendis facere pariatur dolore veniam
-              autem esse non voluptatem saepe provident nihil molestiae.
+Choosing the Bankist App is the best financial decision you'll ever make. With smart tools, instant services, and complete control over your money, it empowers you to manage your finances effortlessly and confidently. Experience banking that's designed to help you save more, spend wisely, and grow your wealth—right at your fingertips.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
@@ -244,11 +230,7 @@
               The last step to becoming a complete minimalist
             </h5>
             <blockquote class="testimonial__text">
-              Quisquam itaque deserunt ullam, quia ea repellendus provident,
-              ducimus neque ipsam modi voluptatibus doloremque, corrupti
-              laborum. Incidunt numquam perferendis veritatis neque repellendus.
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-              deserunt exercitationem deleniti.
+Simplify your finances and embrace true minimalism with the Bankist App—the last step to managing your money effortlessly in one place. Say goodbye to cluttered paperwork and complicated banking; enjoy streamlined, digital-only services that save you time and stress, so you can focus on what really matters.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-2.jpg" alt="" class="testimonial__photo" />
@@ -264,12 +246,7 @@
               Finally free from old-school banks
             </h5>
             <blockquote class="testimonial__text">
-              Debitis, nihil sit minus suscipit magni aperiam vel tenetur
-              incidunt commodi architecto numquam omnis nulla autem,
-              necessitatibus blanditiis modi similique quidem. Odio aliquam
-              culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
-              deleniti saepe aliquid quos inventore sequi. Necessitatibus id
-              alias reiciendis, perferendis facere.
+              Break free from the hassles of traditional banking with the Bankist App. No more long queues, hidden fees, or outdated processes—just fast, transparent, and fully digital banking that puts you in control. Experience the freedom to bank anytime, anywhere, on your terms.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
